# helm-upgrade-preview

./: README.md  pyproject.toml
demo/: values-upgrade.yaml
demo/demo-app/: Chart.yaml  values.yaml
demo/demo-app/templates/: configmap.yaml  deployment.yaml  service.yaml
images/: jsonformat.txt
src/helm_preview/: __init__.py  __main__.py  cli.py  config.py
src/helm_preview.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/helm_preview/analysis/: ownership.py  risk.py
src/helm_preview/core/: helm.py  kubectl.py  runner.py
src/helm_preview/diff/: engine.py  filters.py  semantic.py
src/helm_preview/output/: json_out.py  terminal.py
src/helm_preview/parser/: manifest.py
